baml_language/crates/baml_tests/snapshots/compiles/o1_allowed_roles/baml_tests__compiles__o1_allowed_roles__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
function user.Gpt4oClient$new(lenient: bool) -> ?  [expr] {
  baml.llm.PrimitiveClient { name: "Gpt4oClient", provider: "openai", options: baml.llm.PrimitiveClientOptions { model: "gpt-4o", base_url: null, allowed_role_metadata: null, finish_reason_allow_list: null, finish_reason_deny_list: null, supports_streaming: null, default_role: null, allowed_roles: null, remap_roles: null, api_key: "sk-test", provider_options: null, media_url_handler: null, headers: map {  }, query_params: map {  }, request_body: map {  } } }
}
function user.O1Client$new(lenient: bool) -> ?  [expr] {
  baml.llm.PrimitiveClient { name: "O1Client", provider: "openai", options: baml.llm.PrimitiveClientOptions { model: "o1", base_url: null, allowed_role_metadata: null, finish_reason_allow_list: null, finish_reason_deny_list: null, supports_streaming: null, default_role: null, allowed_roles: null, remap_roles: null, api_key: "sk-test", provider_options: null, media_url_handler: null, headers: map {  }, query_params: map {  }, request_body: map {  } } }
}
function user.O1MiniClient$new(lenient: bool) -> ?  [expr] {
  baml.llm.PrimitiveClient { name: "O1MiniClient", provider: "openai", options: baml.llm.PrimitiveClientOptions { model: "o1-mini", base_url: null, allowed_role_metadata: null, finish_reason_allow_list: null, finish_reason_deny_list: null, supports_streaming: null, default_role: null, allowed_roles: null, remap_roles: null, api_key: "sk-test", provider_options: null, media_url_handler: null, headers: map {  }, query_params: map {  }, request_body: map {  } } }
}
function user.O1WithExplicitRoles$new(lenient: bool) -> ?  [expr] {
  baml.llm.PrimitiveClient { name: "O1WithExplicitRoles", provider: "openai", options: baml.llm.PrimitiveClientOptions { model: "o1", base_url: null, allowed_role_metadata: null, finish_reason_allow_list: null, finish_reason_deny_list: null, supports_streaming: null, default_role: null, allowed_roles: ["system", "user", "assistant"], remap_roles: null, api_key: "sk-test", provider_options: null, media_url_handler: null, headers: map {  }, query_params: map {  }, request_body: map {  } } }
}
