baml_language/crates/baml_tests/snapshots/compiles/o1_allowed_roles/baml_tests__compiles__o1_allowed_roles__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.AskO1(question: string, client: null | ai.Client) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // question // param
    let _2: null | ai.Client // client // param
    let _3: bool
    let _4: ai.RunResult<string>
    let _5: ai.Agent<string>
    let _6: type
    let _7: ai.FunctionSpec<string>

    bb0: {
        _3 = copy _2 == const <omitted>;
        branch copy _3 -> [bb1, bb2];
    }

    bb1: {
        _2 = const null;
        goto -> bb2;
    }

    bb2: {
        _6 = load_type(string);
        _5 = call const fn ai.Agent.new<copy _6>(const <omitted>, copy _2, const <omitted>, const <omitted>) -> [bb3];
    }

    bb3: {
        _7 = call const fn user.AskO1$spec(copy _1) -> [bb4];
    }

    bb4: {
        _4 = virtual_call run as ai.Runner<string, Error = ai.errors.Failure | baml.errors.UnknownError, Output = ai.RunResult<string>>(copy _5, copy _7) -> [bb5];
    }

    bb5: {
        _0 = copy _4.0;
        goto -> bb6;
    }

    bb6: {
        return;
    }
}

fn user.AskO1$parse(json: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // json // param
    let _2: type

    bb0: {
        _2 = load_type(string);
        _0 = call const fn baml.sap.parse<copy _2>(copy _1) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.AskO1$render_prompt(question: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // question // param
    let _2: ai.Prompt
    let _3: ai.FunctionSpec<string>
    let _4: type
    let _5: string
    let _6: type

    bb0: {
        _3 = call const fn user.AskO1$spec(copy _1) -> [bb1];
    }

    bb1: {
        _4 = load_type(string);
        _2 = call const fn ai.FunctionSpec.prompt<copy _4>(copy _3) -> [bb2];
    }

    bb2: {
        _6 = load_type(string);
        goto -> bb3;
    }

    bb3: {
        _5 = call const fn ai.wire.render_output_format(copy _6) -> [bb4];
    }

    bb4: {
        _0 = call const fn ai.Prompt.render_text(copy _2, copy _5) -> [bb5];
    }

    bb5: {
        return;
    }
}

fn user.AskO1$spec(question: string) -> ai.FunctionSpec<string> {
    // Locals:
    let _0: ai.FunctionSpec<string> // _0 // return
    let _1: string // question // param [captured]
    let _2: map<string, unknown>
    let _3: ai.Prompt
    let _4: (string) -> string throws never
    let _5: ai.tools.Toolbox
    let _6: ai.tools.Tool[]

    bb0: {
        _2 = { const "question": copy _1 }: map<string, unknown>;
        _4 = make_closure lambda[0](copy _1);
        _3 = ai.Prompt { copy _4 };
        _6 = []: ai.tools.Tool[];
        _5 = call const fn ai.tools.Toolbox.new(copy _6) -> [bb1];
    }

    bb1: {
        _0 = ai.FunctionSpec<string> { const "AskO1", copy _2, copy _3, copy _5, const item user.O1Client };
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

// lambda[0]
fn .<lambda(AskO1$spec, 0)>( __spec_output_format: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string //  __spec_output_format // param
    let _2: string
    let _3: type

    bb0: {
        _2 = copy capture[0];
        _3 = load_type(string);
        _0 = call const fn baml.String.from<copy _3>(copy _2) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.AskO1$stream(question: string, client: null | ai.stream.StreamingClient) -> baml.llm.Stream<string | null, string> {
    // Locals:
    let _0: baml.llm.Stream<string | null, string> // _0 // return
    let _1: string // question // param
    let _2: null | ai.stream.StreamingClient // client // param
    let _3: bool
    let _4: ai.FunctionSpec<string>
    let _5: type
    let _6: type

    bb0: {
        _3 = copy _2 == const <omitted>;
        branch copy _3 -> [bb1, bb2];
    }

    bb1: {
        _2 = const null;
        goto -> bb2;
    }

    bb2: {
        _4 = call const fn user.AskO1$spec(copy _1) -> [bb3];
    }

    bb3: {
        _5 = load_type(string | null);
        _6 = load_type(string);
        _0 = call const fn ai.stream.from_spec<copy _5, copy _6>(copy _4, copy _2) -> [bb4];
    }

    bb4: {
        return;
    }
}

fn user.AskGpt4o(question: string, client: null | ai.Client) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // question // param
    let _2: null | ai.Client // client // param
    let _3: bool
    let _4: ai.RunResult<string>
    let _5: ai.Agent<string>
    let _6: type
    let _7: ai.FunctionSpec<string>

    bb0: {
        _3 = copy _2 == const <omitted>;
        branch copy _3 -> [bb1, bb2];
    }

    bb1: {
        _2 = const null;
        goto -> bb2;
    }

    bb2: {
        _6 = load_type(string);
        _5 = call const fn ai.Agent.new<copy _6>(const <omitted>, copy _2, const <omitted>, const <omitted>) -> [bb3];
    }

    bb3: {
        _7 = call const fn user.AskGpt4o$spec(copy _1) -> [bb4];
    }

    bb4: {
        _4 = virtual_call run as ai.Runner<string, Error = ai.errors.Failure | baml.errors.UnknownError, Output = ai.RunResult<string>>(copy _5, copy _7) -> [bb5];
    }

    bb5: {
        _0 = copy _4.0;
        goto -> bb6;
    }

    bb6: {
        return;
    }
}

fn user.AskGpt4o$parse(json: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // json // param
    let _2: type

    bb0: {
        _2 = load_type(string);
        _0 = call const fn baml.sap.parse<copy _2>(copy _1) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.AskGpt4o$render_prompt(question: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // question // param
    let _2: ai.Prompt
    let _3: ai.FunctionSpec<string>
    let _4: type
    let _5: string
    let _6: type

    bb0: {
        _3 = call const fn user.AskGpt4o$spec(copy _1) -> [bb1];
    }

    bb1: {
        _4 = load_type(string);
        _2 = call const fn ai.FunctionSpec.prompt<copy _4>(copy _3) -> [bb2];
    }

    bb2: {
        _6 = load_type(string);
        goto -> bb3;
    }

    bb3: {
        _5 = call const fn ai.wire.render_output_format(copy _6) -> [bb4];
    }

    bb4: {
        _0 = call const fn ai.Prompt.render_text(copy _2, copy _5) -> [bb5];
    }

    bb5: {
        return;
    }
}

fn user.AskGpt4o$spec(question: string) -> ai.FunctionSpec<string> {
    // Locals:
    let _0: ai.FunctionSpec<string> // _0 // return
    let _1: string // question // param [captured]
    let _2: map<string, unknown>
    let _3: ai.Prompt
    let _4: (string) -> string throws never
    let _5: ai.tools.Toolbox
    let _6: ai.tools.Tool[]

    bb0: {
        _2 = { const "question": copy _1 }: map<string, unknown>;
        _4 = make_closure lambda[0](copy _1);
        _3 = ai.Prompt { copy _4 };
        _6 = []: ai.tools.Tool[];
        _5 = call const fn ai.tools.Toolbox.new(copy _6) -> [bb1];
    }

    bb1: {
        _0 = ai.FunctionSpec<string> { const "AskGpt4o", copy _2, copy _3, copy _5, const item user.Gpt4oClient };
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

// lambda[0]
fn .<lambda(AskGpt4o$spec, 0)>( __spec_output_format: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string //  __spec_output_format // param
    let _2: string
    let _3: type

    bb0: {
        _2 = copy capture[0];
        _3 = load_type(string);
        _0 = call const fn baml.String.from<copy _3>(copy _2) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.AskGpt4o$stream(question: string, client: null | ai.stream.StreamingClient) -> baml.llm.Stream<string | null, string> {
    // Locals:
    let _0: baml.llm.Stream<string | null, string> // _0 // return
    let _1: string // question // param
    let _2: null | ai.stream.StreamingClient // client // param
    let _3: bool
    let _4: ai.FunctionSpec<string>
    let _5: type
    let _6: type

    bb0: {
        _3 = copy _2 == const <omitted>;
        branch copy _3 -> [bb1, bb2];
    }

    bb1: {
        _2 = const null;
        goto -> bb2;
    }

    bb2: {
        _4 = call const fn user.AskGpt4o$spec(copy _1) -> [bb3];
    }

    bb3: {
        _5 = load_type(string | null);
        _6 = load_type(string);
        _0 = call const fn ai.stream.from_spec<copy _5, copy _6>(copy _4, copy _2) -> [bb4];
    }

    bb4: {
        return;
    }
}
