baml_language/crates/baml_tests/snapshots/compiles/o1_allowed_roles/baml_tests__compiles__o1_allowed_roles__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.AskO1(question: string, client: ai.Client | null = null) -> string throws never {
  ai.Agent.new<string>(client = client).run(AskO1$spec(question)).value : string
}
function user.AskO1$spec(question: string) -> ai.FunctionSpec<string> throws never {
  ai.FunctionSpec { spec_name: "AskO1", args: map { "question": question }, prompt_template: ai.Prompt { template: ( __spec_output_format: string) -> { ... } }, toolbox: ai.Toolbox.new([]), default_client: O1Client } : ai.FunctionSpec<string>
}
lambda user.AskO1$spec {
}
function user.AskO1$render_prompt(question: string) -> string throws never {
  AskO1$spec(question).prompt().render_text(ai.render_output_format(reflect.type_of<string>())) : string
}
function user.AskO1$parse(json: string) -> string throws never {
  baml.sap.parse<T>(json) : string
}
function user.AskGpt4o(question: string, client: ai.Client | null = null) -> string throws never {
  ai.Agent.new<string>(client = client).run(AskGpt4o$spec(question)).value : string
}
function user.AskGpt4o$spec(question: string) -> ai.FunctionSpec<string> throws never {
  ai.FunctionSpec { spec_name: "AskGpt4o", args: map { "question": question }, prompt_template: ai.Prompt { template: ( __spec_output_format: string) -> { ... } }, toolbox: ai.Toolbox.new([]), default_client: Gpt4oClient } : ai.FunctionSpec<string>
}
lambda user.AskGpt4o$spec {
}
function user.AskGpt4o$render_prompt(question: string) -> string throws never {
  AskGpt4o$spec(question).prompt().render_text(ai.render_output_format(reflect.type_of<string>())) : string
}
function user.AskGpt4o$parse(json: string) -> string throws never {
  baml.sap.parse<T>(json) : string
}
function user.AskO1$stream(question: string, client: ai.StreamingClient | null = null) -> baml.llm.Stream<string | null, string> throws never {
  ai.stream_spec(AskO1$spec(question), client = client) : baml.llm.Stream<string | null, string>
}
function user.AskGpt4o$stream(question: string, client: ai.StreamingClient | null = null) -> baml.llm.Stream<string | null, string> throws never {
  ai.stream_spec(AskGpt4o$spec(question), client = client) : baml.llm.Stream<string | null, string>
}
