baml_language/crates/baml_tests/snapshots/compiles/o1_allowed_roles/baml_tests__compiles__o1_allowed_roles__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 14590
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
