baml_language/crates/baml_tests/snapshots/compiles/o1_allowed_roles/baml_tests__compiles__o1_allowed_roles__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function $init() -> null {
    call $init_let_0
    store_global user.O1Client
    call $init_let_1
    store_global user.O1WithExplicitRoles
    call $init_let_2
    store_global user.Gpt4oClient
    call $init_let_3
    store_global user.O1MiniClient
    load_const null
    return
}

function boundary.LocalId.capture(self: boundary.LocalId, inputs: bool | null, output: bool | null, error: bool | null) -> boundary.LocalId {
}

function boundary.id() -> boundary.LocalId {
}

function boundary.id.current() -> string {
}

function reflect.call_any(f: baml.AnyFunction<Returns = R, Throws = E>, args: map<string, unknown>) -> R {
}

function reflect.signature(f: baml.AnyFunction<Returns = unknown, Throws = unknown>) -> reflect.Signature {
}

function user.Gpt4oClient$new(lenient: bool) -> null {
    load_const "Gpt4oClient"
    load_const "openai"
    load_const "gpt-4o"
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const "sk-test"
    load_const null
    load_const null
    load_type string
    load_type string
    alloc_map 0
    load_type string
    load_type string
    alloc_map 0
    load_type string
    load_type unknown
    alloc_map 0
    init_instance baml.llm.PrimitiveClientOptions .model, .base_url, .allowed_role_metadata, .finish_reason_allow_list, .finish_reason_deny_list, .supports_streaming, .default_role, .allowed_roles, .remap_roles, .api_key, .provider_options, .media_url_handler, .headers, .query_params, .request_body
    init_instance baml.llm.PrimitiveClient .name, .provider, .options
    return
}

function user.O1Client$new(lenient: bool) -> null {
    load_const "O1Client"
    load_const "openai"
    load_const "o1"
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const "sk-test"
    load_const null
    load_const null
    load_type string
    load_type string
    alloc_map 0
    load_type string
    load_type string
    alloc_map 0
    load_type string
    load_type unknown
    alloc_map 0
    init_instance baml.llm.PrimitiveClientOptions .model, .base_url, .allowed_role_metadata, .finish_reason_allow_list, .finish_reason_deny_list, .supports_streaming, .default_role, .allowed_roles, .remap_roles, .api_key, .provider_options, .media_url_handler, .headers, .query_params, .request_body
    init_instance baml.llm.PrimitiveClient .name, .provider, .options
    return
}

function user.O1MiniClient$new(lenient: bool) -> null {
    load_const "O1MiniClient"
    load_const "openai"
    load_const "o1-mini"
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const "sk-test"
    load_const null
    load_const null
    load_type string
    load_type string
    alloc_map 0
    load_type string
    load_type string
    alloc_map 0
    load_type string
    load_type unknown
    alloc_map 0
    init_instance baml.llm.PrimitiveClientOptions .model, .base_url, .allowed_role_metadata, .finish_reason_allow_list, .finish_reason_deny_list, .supports_streaming, .default_role, .allowed_roles, .remap_roles, .api_key, .provider_options, .media_url_handler, .headers, .query_params, .request_body
    init_instance baml.llm.PrimitiveClient .name, .provider, .options
    return
}

function user.O1WithExplicitRoles$new(lenient: bool) -> null {
    load_const "O1WithExplicitRoles"
    load_const "openai"
    load_const "o1"
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const "system"
    load_const "user"
    load_const "assistant"
    load_type string
    alloc_array 3
    load_const null
    load_const "sk-test"
    load_const null
    load_const null
    load_type string
    load_type string
    alloc_map 0
    load_type string
    load_type string
    alloc_map 0
    load_type string
    load_type unknown
    alloc_map 0
    init_instance baml.llm.PrimitiveClientOptions .model, .base_url, .allowed_role_metadata, .finish_reason_allow_list, .finish_reason_deny_list, .supports_streaming, .default_role, .allowed_roles, .remap_roles, .api_key, .provider_options, .media_url_handler, .headers, .query_params, .request_body
    init_instance baml.llm.PrimitiveClient .name, .provider, .options
    return
}
